Add regexp-based feedback and subdiff method to text questions (#49)
Feedback can be given with regular expressions in questionnaire text questions.
If the submission matches the regexp, the feedback is shown. There may be
multiple lines of feedback for different submissions. Regexp support must be
enabled separately with the configuration field `compare_regexp` under the
`feedback` object of the exercise YAML file. By default, string equality is
used to compare the values without any regexp matching.

The subdiff compare method supports multiple correct answer choices.
The choices are compared to the submission with string equality (not regexp).
In addition to the normal feedback defined in the configuration, subdiff
questions generate automatic feedback that shows the difference of the
student's submission to the correct answers. The difference feedback reveals
exactly which characters are correct in the student's submission.

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MOOC-grader\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-21 09:45+0000\n"
+"POT-Creation-Date: 2019-11-30 13:27+0000\n"
 "PO-Revision-Date: 2019-10-12 20:00+0300\n"
 "Last-Translator: Markku Riekkinen <markku.riekkinen@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -383,6 +383,14 @@ msgstr ""
 "Pahoittelemme häiriötä.\n"
 "Yritä myöhemmin uudelleen tai ota yhteyttä kurssihenkilökuntaan."
 
-#: access/types/forms.py:659
+#: access/types/forms.py:681
 msgid "Multiple choices are selectable."
 msgstr "Voit valita useita vaihtoehtoja."
+
+#: access/types/forms.py:799
+msgid "Multiple correct answers accepted."
+msgstr "Useita oikeita vastauksia."
+
+#: access/types/forms.py:803
+msgid "Correct parts in your answer: "
+msgstr "Oikeat osat vastauksessasi: "
