Change the title "Submission accepted" to "Submission received"
The async_accepted.html template is used when a submission is
submitted for asynchronous grading and the grading is going to
be started.

The message "submission accepted" was a little misleading in
the sense that it may make the user think that the submission
is graded with acceptable points, but now it only means that
the submission has been received and will be graded soon.

In addition, add a comment to the message that the user may close
the modal dialog. The user need not wait and stare at the modal
dialog while the submission is being graded. In some courses,
especially in Scala courses, the grading usually takes over one
minute and the user may think it is necessary to wait a minute
in the modal dialog before they can move on. The modal dialog
polls for the feedback for one minute and then informs the user
that the grading takes longer than that.

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,9 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MOOC-grader\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-30 17:50+0000\n"
+"POT-Creation-Date: 2021-02-08 11:08+0000\n"
 "PO-Revision-Date: 2019-10-12 20:00+0300\n"
-"Last-Translator: Saara Satokangas <saara.satokangas@aalto.fi>\n"
+"Last-Translator: Markku Riekkinen <markku.riekkinen@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
@@ -141,7 +141,7 @@ msgstr ""
 "\t\t"
 
 #: access/templates/access/async_accepted.html:27
-msgid "Submission accepted"
+msgid "Submission received"
 msgstr "Palautus on vastaanotettu"
 
 #: access/templates/access/async_accepted.html:32
@@ -159,35 +159,27 @@ msgstr ""
 
 #: access/templates/access/async_accepted.html:44
 msgid ""
-"\n"
-"\t\tYour submission is being graded. The result will be available on this "
-"page\n"
-"\t\twhen the grading process completes. Note that grading may take a while.\n"
-"\t\tYou might also need to update the page manually in order to see the "
-"results.\n"
-"\t\t"
+"Your submission is being graded. The result will be available on this page "
+"when the grading process completes. Note that the grading may take a while. "
+"You might also need to update the page manually in order to see the results. "
+"You may close this message."
 msgstr ""
-"\n"
-"Palautuksesi on arvosteltavana. Tulos on mahdollista nähdä tällä\n"
-"sivulla, kun arvosteluprosessi on suoritettu loppuun.\n"
-"Huomioi, että arvostelu voi kestää useita kymmeniä sekunteja.\n"
-"Voit lisäksi joutua lataamaan tämän sivun uudestaan nähdäksesi palautteen."
+"Palautuksesi on arvosteltavana. Tulos on mahdollista nähdä tällä sivulla, "
+"kun arvosteluprosessi on suoritettu loppuun. Huomioi, että arvostelu voi "
+"kestää useita kymmeniä sekunteja. Voit lisäksi joutua lataamaan tämän sivun "
+"uudestaan nähdäksesi palautteen. Tämän viestin voi sulkea."
 
-#: access/templates/access/async_accepted.html:50
+#: access/templates/access/async_accepted.html:51
 #, python-format
 msgid ""
-"\n"
-"\t\tYour submission is in the grading queue. There are %(queue)s other\n"
-"\t\tsubmissions before. The result will be available on this page\n"
-"\t\twhen the grading process completes. The page must be updated manually "
-"to\n"
-"\t\tsee the results.\n"
-"\t\t"
+"Your submission is in the grading queue. There are %(queue)s other "
+"submissions before. The result will be available on this page when the "
+"grading process completes. The page must be updated manually to see the "
+"results."
 msgstr ""
-"\n"
-"Palautuksesi on arvostelujonossa. Jonossa on edellä %(queue)s palautusta.\n"
-"Tulos näytetään tällä sivulla, kun arvosteluprosessi on suoritettu.\n"
-"Joudut lataamaan sivun uudelleen nähdäksesi palautteen."
+"Palautuksesi on arvostelujonossa. Jonossa on edellä %(queue)s palautusta. "
+"Tulos näytetään tällä sivulla, kun arvosteluprosessi on suoritettu. Joudut "
+"lataamaan sivun uudelleen nähdäksesi palautteen."
 
 #: access/templates/access/course.html:10
 msgid "Service URLs for A+"
